# simplegallery

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  NEXT.md  README.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
docker/: imagemagick-policy.xml
docs/: NEXT.md  TODO.md
src/simplegallery/: __main__.py  builder.py  cache.py  cli.py  config.py  image_processor.py  renderer.py  scanner.py  slugify.py  video_processor.py  watcher.py
src/simplegallery/static/: gallery.css  gallery.js
src/simplegallery/templates/: _breadcrumbs.html.j2  base.html.j2  gallery.html.j2  index.html.j2
tests/: test_builder_tree.py  test_cache.py  test_config.py  test_frontend_assets.py  test_image_processor.py  test_renderer.py  test_scanner.py  test_scanner_tree.py  test_slugify.py  test_smoke.py  test_video_processor.py  test_watcher.py
